fix: fix wrong font path

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -4,7 +4,7 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url('../assets/fonts/Inter-roman.var.woff2?v=3.19') format('woff2');
+  src: url('../fonts/Inter-roman.var.woff2?v=3.19') format('woff2');
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   font-display: swap;
   font-style: italic;
   font-named-instance: 'Italic';
-  src: url('../assets/fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
+  src: url('../fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
 }
 
 @font-face {
@@ -22,7 +22,7 @@
   font-weight: 400;
   font-display: swap;
   src: local('IBM Plex Sans Thai'), local('IBMPlexSansThai'),
-    url('../assets/fonts/IBMPlexSansThai-Regular.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
   font-weight: 450;
   font-display: swap;
   src: local('IBM Plex Sans Thai Text'), local('IBMPlexSansThai-Text'),
-    url('../assets/fonts/IBMPlexSansThai-Text.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Text.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
   font-weight: 500;
   font-display: swap;
   src: local('IBM Plex Sans Thai Medium'), local('IBMPlexSansThai-Medium'),
-    url('../assets/fonts/IBMPlexSansThai-Medium.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -49,7 +49,7 @@
   font-weight: 600;
   font-display: swap;
   src: local('IBM Plex Sans Thai SemiBold'), local('IBMPlexSansThai-SemiBold'),
-    url('../assets/fonts/IBMPlexSansThai-SemiBold.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -58,7 +58,7 @@
   font-weight: 700;
   font-display: swap;
   src: local('IBM Plex Sans Thai Bold'), local('IBMPlexSansThai-Bold'),
-    url('../assets/fonts/IBMPlexSansThai-Bold.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -67,7 +67,7 @@
   font-weight: 100;
   font-display: swap;
   src: local('IBM Plex Sans Thai Thin'), local('IBMPlexSansThai-Thin'),
-    url('../assets/fonts/IBMPlexSansThai-Thin.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -77,7 +77,7 @@
   font-display: swap;
   src: local('IBM Plex Sans Thai ExtraLight'),
     local('IBMPlexSansThai-ExtraLight'),
-    url('../assets/fonts/IBMPlexSansThai-ExtraLight.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -86,7 +86,7 @@
   font-weight: 300;
   font-display: swap;
   src: local('IBM Plex Sans Thai Light'), local('IBMPlexSansThai-Light'),
-    url('../assets/fonts/IBMPlexSansThai-Light.woff2') format('woff2');
+    url('../fonts/IBMPlexSansThai-Light.woff2') format('woff2');
 }
 
 @font-face {
